--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -22,14 +22,20 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
+        uses: hashicorp/setup-terraform@v2
         with:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
       - name: Setup Terragrunt
         uses: autero1/action-terragrunt@v1.3.2
         with:
-          terragrunt_version: latest
+          terragrunt_version: 0.68.4
+
+      - name: Terragrunt version
+        run: terragrunt --version
+
+      - name: Terraform version
+        run: terraform --version
 
       - name: Terragrunt Init
         run: terragrunt init
