--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -9,7 +9,7 @@ env:
   TF_CLOUD_ORGANIZATION: "dark-contoso"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   TF_WORKSPACE: "blog-az-private-frontdoor"
-  CONFIG_DIRECTORY: "./infra"
+  CONFIG_DIRECTORY: "./infra/regions"
 
 jobs:
   terragrunt:
