refactor: implemented custom Terragrunt setup

--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -1,62 +1,50 @@
-name: "Terragrunt Apply"
+name: Terragrunt Deploy
 
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 env:
   TF_CLOUD_ORGANIZATION: "dark-contoso"
-  TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   TF_WORKSPACE: "blog-az-private-frontdoor"
+  TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
+  TERRAGRUNT_VERSION: "0.68.4"
   CONFIG_DIRECTORY: "./infra/regions"
 
 jobs:
-  terragrunt:
-    name: "Terragrunt Apply"
+  terragrunt-deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.9.8
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+          terraform_version: "1.9.8"
 
-      - name: Setup Terragrunt
-        uses: autero1/action-terragrunt@v1.3.2
-        with:
-          terragrunt_version: 0.68.4
-
-      - name: Terragrunt version
-        run: terragrunt --version
-
-      - name: Terraform version
-        run: terraform --version
-
-      - name: Get Terraform binary path
-        id: tf-path
-        run: echo "tf_path=$(which terraform)" >> $GITHUB_OUTPUT
+      - name: Install Terragrunt
+        run: |
+          wget https://github.com/gruntwork-io/terragrunt/releases/download/v${TERRAGRUNT_VERSION}/terragrunt_linux_amd64
+          chmod +x terragrunt_linux_amd64
+          sudo mv terragrunt_linux_amd64 /usr/local/bin/terragrunt
 
       - name: Terragrunt Init
-        run: terragrunt init
-        env:
-          TERRAGRUNT_TFPATH: ${{ steps.tf-path.outputs.tf_path }}
-        working-directory: ${{ env.CONFIG_DIRECTORY }}
+        run: |
+          cd ${{ env.CONFIG_DIRECTORY }}
+          terragrunt run-all init
 
       - name: Terragrunt Plan
-        run: terragrunt plan -no-color
-        env:
-          TERRAGRUNT_TFPATH: ${{ steps.tf-path.outputs.tf_path }}
-        working-directory: ${{ env.CONFIG_DIRECTORY }}
+        run: |
+          cd ${{ env.CONFIG_DIRECTORY }}
+          terragrunt run-all plan
 
       - name: Terragrunt Apply
-        if: github.ref == 'refs/heads/main'
-        run: terragrunt apply -auto-approve
-        env:
-          TERRAGRUNT_TFPATH: ${{ steps.tf-path.outputs.tf_path }}
-        working-directory: ${{ env.CONFIG_DIRECTORY }}
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: |
+          cd ${{ env.CONFIG_DIRECTORY }}
+          terragrunt run-all apply --auto-approve
